[package]
name = "sort_zh"
version = "0.1.1"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "Provide the functionality to sort Vec<&str> with Chinese collate, with optional Chinese number sort functionality."
license = "MIT"
documentation = "https://mingchang.tw/sort_zh/index.html"
repository = "https://github.com/ming900518/sort_zh"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
chinese-number = "0.6.5"
rust_icu_ucol = "*"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
